# api/api/default.service.ts
@@ -2,7 +2,7 @@
  * twitter-api
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: 2019-11-13T03:56:10Z
+ * OpenAPI spec version: 2019-11-15T18:25:20Z
  *
  *
  * NOTE: This class is auto generated by the swagger code generator program.
@@ -18,6 +18,7 @@ import { CustomHttpUrlEncodingCodec }                        from '../encoder';
 
 import { Observable }                                        from 'rxjs/Observable';
 
+import { AuthResponse } from '../model/authResponse';
 import { Empty } from '../model/empty';
 import { IsFollowingResponse } from '../model/isFollowingResponse';
 import { PostStatusRequest } from '../model/postStatusRequest';
@@ -242,80 +243,6 @@ export class DefaultService {
         ];
 
         return this.httpClient.get<StatusesResponse>(`${this.basePath}/statuses/hashtag/${encodeURIComponent(String(hashtag))}`,
-            {
-                withCredentials: this.configuration.withCredentials,
-                headers: headers,
-                observe: observe,
-                reportProgress: reportProgress
-            }
-        );
-    }
-
-    /**
-     *
-     *
-     * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
-     * @param reportProgress flag to report request and response progress.
-     */
-    public statusesHashtagHashtagOptions(observe?: 'body', reportProgress?: boolean): Observable<Empty>;
-    public statusesHashtagHashtagOptions(observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<Empty>>;
-    public statusesHashtagHashtagOptions(observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<Empty>>;
-    public statusesHashtagHashtagOptions(observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
-
-        let headers = this.defaultHeaders;
-
-        // to determine the Accept header
-        let httpHeaderAccepts: string[] = [
-            'application/json'
-        ];
-        const httpHeaderAcceptSelected: string | undefined = this.configuration.selectHeaderAccept(httpHeaderAccepts);
-        if (httpHeaderAcceptSelected != undefined) {
-            headers = headers.set('Accept', httpHeaderAcceptSelected);
-        }
-
-        // to determine the Content-Type header
-        const consumes: string[] = [
-            'application/json'
-        ];
-
-        return this.httpClient.options<Empty>(`${this.basePath}/statuses/hashtag/${encodeURIComponent(String('hashtag'))}`,
-            {
-                withCredentials: this.configuration.withCredentials,
-                headers: headers,
-                observe: observe,
-                reportProgress: reportProgress
-            }
-        );
-    }
-
-    /**
-     *
-     *
-     * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
-     * @param reportProgress flag to report request and response progress.
-     */
-    public statusesPostOptions(observe?: 'body', reportProgress?: boolean): Observable<Empty>;
-    public statusesPostOptions(observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<Empty>>;
-    public statusesPostOptions(observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<Empty>>;
-    public statusesPostOptions(observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
-
-        let headers = this.defaultHeaders;
-
-        // to determine the Accept header
-        let httpHeaderAccepts: string[] = [
-            'application/json'
-        ];
-        const httpHeaderAcceptSelected: string | undefined = this.configuration.selectHeaderAccept(httpHeaderAccepts);
-        if (httpHeaderAcceptSelected != undefined) {
-            headers = headers.set('Accept', httpHeaderAcceptSelected);
-        }
-
-        // to determine the Content-Type header
-        const consumes: string[] = [
-            'application/json'
-        ];
-
-        return this.httpClient.options<Empty>(`${this.basePath}/statuses/post`,
             {
                 withCredentials: this.configuration.withCredentials,
                 headers: headers,
@@ -589,6 +516,91 @@ export class DefaultService {
      * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
      * @param reportProgress flag to report request and response progress.
      */
+    public usersHandleLoginGet(handle: string, observe?: 'body', reportProgress?: boolean): Observable<AuthResponse>;
+    public usersHandleLoginGet(handle: string, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<AuthResponse>>;
+    public usersHandleLoginGet(handle: string, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<AuthResponse>>;
+    public usersHandleLoginGet(handle: string, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
+
+        if (handle === null || handle === undefined) {
+            throw new Error('Required parameter handle was null or undefined when calling usersHandleLoginGet.');
+        }
+
+        let headers = this.defaultHeaders;
+
+        // to determine the Accept header
+        let httpHeaderAccepts: string[] = [
+            'application/json'
+        ];
+        const httpHeaderAcceptSelected: string | undefined = this.configuration.selectHeaderAccept(httpHeaderAccepts);
+        if (httpHeaderAcceptSelected != undefined) {
+            headers = headers.set('Accept', httpHeaderAcceptSelected);
+        }
+
+        // to determine the Content-Type header
+        const consumes: string[] = [
+            'application/json'
+        ];
+
+        return this.httpClient.get<AuthResponse>(`${this.basePath}/users/${encodeURIComponent(String(handle))}/login`,
+            {
+                withCredentials: this.configuration.withCredentials,
+                headers: headers,
+                observe: observe,
+                reportProgress: reportProgress
+            }
+        );
+    }
+
+    /**
+     *
+     *
+     * @param handle
+     * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
+     * @param reportProgress flag to report request and response progress.
+     */
+    public usersHandleLogoutPost(handle: string, observe?: 'body', reportProgress?: boolean): Observable<Response>;
+    public usersHandleLogoutPost(handle: string, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<Response>>;
+    public usersHandleLogoutPost(handle: string, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<Response>>;
+    public usersHandleLogoutPost(handle: string, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
+
+        if (handle === null || handle === undefined) {
+            throw new Error('Required parameter handle was null or undefined when calling usersHandleLogoutPost.');
+        }
+
+        let headers = this.defaultHeaders;
+
+        // to determine the Accept header
+        let httpHeaderAccepts: string[] = [
+            'application/json'
+        ];
+        const httpHeaderAcceptSelected: string | undefined = this.configuration.selectHeaderAccept(httpHeaderAccepts);
+        if (httpHeaderAcceptSelected != undefined) {
+            headers = headers.set('Accept', httpHeaderAcceptSelected);
+        }
+
+        // to determine the Content-Type header
+        const consumes: string[] = [
+            'application/json'
+        ];
+
+        return this.httpClient.post<Response>(`${this.basePath}/users/${encodeURIComponent(String(handle))}/logout`,
+            null,
+            {
+                withCredentials: this.configuration.withCredentials,
+                headers: headers,
+                observe: observe,
+                reportProgress: reportProgress
+            }
+        );
+    }
+
+    /**
+     *
+     *
+     * @param handle
+     * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
+     * @param reportProgress flag to report request and response progress.
+     */
     public usersHandleProfileGet(handle: string, observe?: 'body', reportProgress?: boolean): Observable<ProfileResponse>;
     public usersHandleProfileGet(handle: string, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<ProfileResponse>>;
     public usersHandleProfileGet(handle: string, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<ProfileResponse>>;
@@ -704,43 +716,6 @@ export class DefaultService {
 
         return this.httpClient.post<Response>(`${this.basePath}/users/${encodeURIComponent(String(handle))}/profile`,
             updateProfileRequest,
-            {
-                withCredentials: this.configuration.withCredentials,
-                headers: headers,
-                observe: observe,
-                reportProgress: reportProgress
-            }
-        );
-    }
-
-    /**
-     *
-     *
-     * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
-     * @param reportProgress flag to report request and response progress.
-     */
-    public usersHandleSignupOptions(observe?: 'body', reportProgress?: boolean): Observable<Empty>;
-    public usersHandleSignupOptions(observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<Empty>>;
-    public usersHandleSignupOptions(observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<Empty>>;
-    public usersHandleSignupOptions(observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
-
-        let headers = this.defaultHeaders;
-
-        // to determine the Accept header
-        let httpHeaderAccepts: string[] = [
-            'application/json'
-        ];
-        const httpHeaderAcceptSelected: string | undefined = this.configuration.selectHeaderAccept(httpHeaderAccepts);
-        if (httpHeaderAcceptSelected != undefined) {
-            headers = headers.set('Accept', httpHeaderAcceptSelected);
-        }
-
-        // to determine the Content-Type header
-        const consumes: string[] = [
-            'application/json'
-        ];
-
-        return this.httpClient.options<Empty>(`${this.basePath}/users/${encodeURIComponent(String('handle'))}/signup`,
             {
                 withCredentials: this.configuration.withCredentials,
                 headers: headers,
