# api/model/authResponse.ts
@@ -2,7 +2,7 @@
  * twitter-api
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: 2019-10-29T00:35:13Z
+ * OpenAPI spec version: 2019-11-15T18:25:20Z
  * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
@@ -11,10 +11,9 @@
  */
 
 
-export interface StatusesResponseStatuses { 
-    message?: string;
-    attachmentSrc?: string;
-    ownerHandle?: string;
-    date?: string;
-    id?: string;
+export interface AuthResponse { 
+    /**
+     * The user auth token
+     */
+    authToken?: string;
 }
