# api/model/models.ts
@@ -1,3 +1,4 @@
+export * from './authResponse';
 export * from './empty';
 export * from './isFollowingResponse';
 export * from './postStatusRequest';
